--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -29,7 +29,7 @@
           <input
             type="email"
             class="form-control"
-            name="email"
+            name="username"
             placeholder="Email"
             required="required"
           />
