login & infection overview

--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="login.css" class="css" />
+    <link rel="stylesheet" href="/login.css" class="css" />
     <title>Login</title>
   </head>
 
@@ -50,9 +50,9 @@
       <div class="hint-text">
         Don't have an account? <a id="doSignIn" href="#">Sign up here!</a>
       </div>
-      <div class="overview">
+      <div class="hint-text">
         See the overview of infection
-        <a id="overview" href="overview">Infection Overview</a>
+        <h2><a id="overview" href="overview">Infection Overview</a></h2>
       </div>
     </div>
     <div class="signup-form" id="signUpForm" style="display: none;">
@@ -117,6 +117,7 @@
         Already have an account? <a id="doSignUp" href="#">Login here</a>
       </div>
     </div>
+    ß
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./login.js"></script>
