--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -10,7 +10,7 @@
     <h2>Welcome!</h2>
     <div class="hint-text">
       See the overview of infection
-      <h2><a id="overview" href="overview">Infection Overview</a></h2>
+      <h2><a id="overview" href="/overview">Infection Overview</a></h2>
     </div>
   </body>
 </html>
