add form validation

--- a/Backend/public/signup.css
+++ b/Backend/public/signup.css
@@ -3,8 +3,6 @@ body {
     background: #add2eb;
     font-family: 'Roboto', sans-serif;
     height: 100%;
-    /* background: url("../assets/bg.jpg") no-repeat center fixed; */
-    /* background-size: cover; */
 }
 
 .form-control {
@@ -105,8 +103,6 @@ body {
     text-align: center;
 }
 
-.alertPosition {
-    position: absolute;
-    width: 390px;
-    top: 80px;
+span {
+    font-size: 11px;
 }
