--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -49,7 +49,7 @@
       </form>
       <div class="hint-text">
         Don't have an account?
-        <a id="doSignIn" href="/api/signup">Sign up here!</a>
+        <a id="doSignIn" href="/signup">Sign up here!</a>
       </div>
       <div class="hint-text">
         See Our Stay Strong Slogan
