resize_dropable_widget2

--- a/Backend/views/animation.ejs
+++ b/Backend/views/animation.ejs
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation</title>
-    <link rel="stylesheet" href="animation.css" class="css">
+    <link rel="stylesheet" href="/animation.css" class="css">
+    <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
+
 </head>
 
 <body>
-    <canvas id="myCanvas" width="900" height="400"></canvas>
-    <script type="text/javascript" src="./animation.js"></script>
+    <canvas id="myCanvas"  width="800" height="700"></canvas>
+    
+  
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>  
+    <script type="text/javascript" src="/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/animation.js"></script>
 </body>
 
 </html>
