--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -55,6 +55,9 @@
         See Our Stay Strong Slogan
         <h2><a id="staystrong" href="/animation">Our Slogan</a></h2>
       </div>
+      <div id="date_picker_widget">
+       <h2><a href="/date_picker">Date Picker Widget</a></h2> 
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
