--- a/Backend/public/animation.css
+++ b/Backend/public/animation.css
@@ -1,5 +1,6 @@
 #myCanvas {
     position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+    margin: 0 auto;
+  
+    border: 2px solid red;
 }
