--- a/Backend/views/infectionOverview.ejs
+++ b/Backend/views/infectionOverview.ejs
@@ -25,6 +25,6 @@
 
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="data.js"></script>
-    <script src="app.js"></script>
+    <script src="/infectionOverview.js"></script>
   </body>
 </html>
