--- a/Backend/views/signup.ejs
+++ b/Backend/views/signup.ejs
@@ -22,7 +22,7 @@
 
   <body>
     <div class="signup-form" id="signUpForm">
-      <form action="http://localhost:5000/api/signup" method="post">
+      <form action="/api/signup" method="post">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         <hr />
@@ -58,12 +58,17 @@
           />
         </div>
         <div class="form-group">
+          
           <input
             type="password"
             class="form-control"
             name="password"
             placeholder="Password"
-            required="required"
+            required="required" 
+            id="psw" 
+            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title=
+            "Must contain at least one number and one uppercase and lowercase letter, 
+            and at least 8 or more characters"
           />
         </div>
         <div class="form-group">
@@ -73,20 +78,92 @@
             name="confirm_password"
             placeholder="Confirm Password"
             required="required"
+            pattern = ".{5,10}"
+            required title="Passowrd must between 5 to 10 words."
           />
         </div>
+        <div id="message">
+          <h3>Password must contain the following:</h3>
+          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+          <p id="number" class="invalid">A <b>number</b></p>
+          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+        </div>
+
         <div class="form-group">
           <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
         </div>
       </form>
       <div class="hint-text">
         Already have an account?
-        <a id="doSignUp" href="http://localhost:5000/">Login here</a>
+        <a id="doSignUp" href="/api/login">Login here</a>
       </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./signup.js"></script>
+
+    <!-- The following is the passoword validation code block-->
+    <script>
+      var myInput = document.getElementById("psw");
+      var letter = document.getElementById("letter");
+      var capital = document.getElementById("capital");
+      var number = document.getElementById("number");
+      var length = document.getElementById("length");
+      
+      // When the user clicks on the password field, show the message box
+      myInput.onfocus = function() {
+        document.getElementById("message").style.display = "block";
+      }
+      
+      // When the user clicks outside of the password field, hide the message box
+      myInput.onblur = function() {
+        document.getElementById("message").style.display = "none";
+      }
+      
+      // When the user starts to type something inside the password field
+      myInput.onkeyup = function() {
+        // Validate lowercase letters
+        var lowerCaseLetters = /[a-z]/g;
+        if(myInput.value.match(lowerCaseLetters)) {  
+          letter.classList.remove("invalid");
+          letter.classList.add("valid");
+        } else {
+          letter.classList.remove("valid");
+          letter.classList.add("invalid");
+        }
+        
+        // Validate capital letters
+        var upperCaseLetters = /[A-Z]/g;
+        if(myInput.value.match(upperCaseLetters)) {  
+          capital.classList.remove("invalid");
+          capital.classList.add("valid");
+        } else {
+          capital.classList.remove("valid");
+          capital.classList.add("invalid");
+        }
+      
+        // Validate numbers
+        var numbers = /[0-9]/g;
+        if(myInput.value.match(numbers)) {  
+          number.classList.remove("invalid");
+          number.classList.add("valid");
+        } else {
+          number.classList.remove("valid");
+          number.classList.add("invalid");
+        }
+        
+        // Validate length
+        if(myInput.value.length >= 8) {
+          length.classList.remove("invalid");
+          length.classList.add("valid");
+        } else {
+          length.classList.remove("valid");
+          length.classList.add("invalid");
+        }
+      }
+      </script>
+
   </body>
 </html>
