move data_picker.js to data file, add data_pickerroutes, add invalid date 404

--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -12,5 +12,8 @@
       See the overview of infection
       <h2><a id="overview" href="/overview">Infection Overview</a></h2>
     </div>
+    <div id="date_picker_widget">
+      <h2><a href="/date_picker">Date Picker Widget</a></h2>
+    </div>
   </body>
 </html>
