add JQuery UI theme css

--- a/Backend/views/date_picker_widget.ejs
+++ b/Backend/views/date_picker_widget.ejs
@@ -10,7 +10,7 @@
   />
 </head>
 <body>
-    <h1>Detailed Info for Coronavirus Infection in China</h1>
+    <h1>Detailed Info for Coronavirus Infection in China</h1>`
     <form  action="/detailed_daily_info" method="post">
         <div class="form-group">
             <input class="form-control" type="text" id="datePicker" name="date" placeholder="date" value="<%= locals.date %>" aria-describedby="dateHelp">
