--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.structure.css">
+    <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
+    <link rel="stylesheet" type="text/css" href="/home.css">
   </head>
   <body>
-    <h1>Home Page</h1>
+  <div class="container ui-corner-right">
+    <h1 class="">Home Page</h1>
     <h2>Welcome!</h2>
     <div class="hint-text">
       See the overview of infection
@@ -15,5 +20,6 @@
     <div id="date_picker_widget">
       <h2><a href="/date_picker">Date Picker Widget</a></h2>
     </div>
+  </div>
   </body>
 </html>
