--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -15,5 +15,8 @@
     <div id="date_picker_widget">
       <h2><a href="/date_picker">Date Picker Widget</a></h2>
     </div>
+    <div id="newsPage">
+      <h2><a href="/newsPage">COVID-19 News</a></h2>
+    </div>
   </body>
 </html>
