--- a/Backend/public/newsPage.css
+++ b/Backend/public/newsPage.css
@@ -1,12 +1,10 @@
 header{
     font-size: 30px;
-    background-color: lightgray;
+    background-color: #add2eb;
     text-align: center;
     padding: 20px;
     margin: auto;
     width: 99%;
-
-
 }
 
 #container{
@@ -16,6 +14,29 @@ header{
 }
 
 .card{
+    background-color:#e3dfdf;
     font-size: 12px;
-    border: solid gray;
+    /* border: solid gray 1px; */
+    height:150px;
+    box-shadow: -9px 17px 27px -5px rgba(0,0,0,0.75);
+}
+
+.nav-tabs {
+    box-shadow: -9px 17px 27px -5px rgba(0,0,0,0.75);
+}
+
+.card-body{
+    margin: auto;
+}
+
+#newsImage{
+    width: 200px;
+    height: 150px;
+    float: right;
+}
+
+#innerContainer {
+    width: 70%;
+    display: inline-block;
+    padding: 20px;
 }
