--- a/Backend/views/date_picker_widget.ejs
+++ b/Backend/views/date_picker_widget.ejs
@@ -1,53 +1,74 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>date_picker_widget</title>
-    <link rel="stylesheet" type="text/css" href="/date_picker.css" >
-    <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>date_picker_widget</title>
+  <link rel="stylesheet" type="text/css" href="/date_picker.css">
+  <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="/home.css">
 </head>
+
 <body>
-    <h1>Detailed Info for Coronavirus Infection in China</h1>`
-    <form  action="/detailed_daily_info" method="post">
-        <div class="form-group">
-            <input class="form-control" type="text" id="datePicker" name="date" placeholder="date" value="<%= locals.date %>" aria-describedby="dateHelp">
-            <small id="dateHelp" class="form-text text-muted">The scope of date should between 2020-1-13 to 2020-2-26.</small>
-        </div>
-        
-        <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-        </div>
-    </form>
-  
+  <div class="navbar">
+    <ul>
+      <li><a href="/overview">Infection Overview</a></li>
+      <li><a href="/date_picker">Date Picker</a></li>
+    </ul>
+  </div>
+  <h1>Detailed Info for Coronavirus Infection in China</h1>`
+  <form action="/detailed_daily_info" method="post">
+    <div class="form-group">
+      <input class="form-control" type="text" id="datePicker" name="date" placeholder="date" value="<%= locals.date %>"
+        aria-describedby="dateHelp">
+      <small id="dateHelp" class="form-text text-muted">The scope of date should between 2020-1-13 to 2020-2-26.</small>
+    </div>
 
-        <form>
-            <div class="form-group">
-              <label >Confirmed</label>
-              <input type="text" class="form-control" id="Confirmed" value= <%= locals.confirmed %> >
-              
-            </div>
-            <div class="form-group">
-              <label>Suspect</label>
-              <input type="text" class="form-control" id="Suspect" value= <%= locals.suspect %>>
-            </div>
-            <div class="form-group">
-                <label>Dead</label>
-                <input type="text" class="form-control" id="Dead" value= <%= locals.dead %>>
-              </div>
-              <div class="form-group">
-                <label>Heal</label>
-                <input type="text" class="form-control" id="Heal" value= <%= locals.heal %>>
-              </div>
-            
-          </form>
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+    </div>
+  </form>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>  
-    <script type="text/javascript" src="/jquery-ui-1.12.1/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/date_picker.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <form>
+    <div class="form-group">
+      <label>Confirmed</label>
+      <input type="text" class="form-control" id="Confirmed" value=<%= locals.confirmed %>>
+
+    </div>
+    <div class="form-group">
+      <label>Suspect</label>
+      <input type="text" class="form-control" id="Suspect" value=<%= locals.suspect %>>
+    </div>
+    <div class="form-group">
+      <label>Dead</label>
+      <input type="text" class="form-control" id="Dead" value=<%= locals.dead %>>
+    </div>
+    <div class="form-group">
+      <label>Heal</label>
+      <input type="text" class="form-control" id="Heal" value=<%= locals.heal %>>
+    </div>
+
+  </form>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
+            <a href="#">WELL</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="/date_picker.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
