--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.structure.css">
-    <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
-    <link rel="stylesheet" type="text/css" href="/home.css">
-  </head>
-  <body>
-  <div class="container ui-corner-right">
-    <h1 class="">Home Page</h1>
-    <h2>Welcome!</h2>
-    <div class="hint-text">
-      See the overview of infection
-      <h2><a id="overview" href="/overview">Infection Overview</a></h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home Page</title>
+  <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
+  <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.structure.css">
+  <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
+  <link rel="stylesheet" type="text/css" href="/home.css">
+</head>
+
+<body>
+
+  <div class="navbar">
+    <ul>
+      <li><a href="/overview">Infection Overview</a></li>
+      <li><a href="/date_picker">Date Picker</a></li>
+    </ul>
+  </div>
+
+  <div class="center-container">
+    <div class="container ui-corner-right">
+      <h1 class="">Home Page</h1>
+      <h2>Welcome!</h2>
+      <div class="hint-text">
+        See the overview of infection
+        <h2><a id="overview" href="/overview">Infection Overview</a></h2>
+      </div>
+      <div id="date_picker_widget">
+        <h2><a href="/date_picker">Date Picker Widget</a></h2>
+      </div>
+
+      <div id="newsPage">
+        <h2><a href="/newsPage">COVID-19 News</a></h2>
+      </div>
+
     </div>
-    <div id="date_picker_widget">
-      <h2><a href="/date_picker">Date Picker Widget</a></h2>
-    </div>
-    <div id="newsPage">
-      <h2><a href="/newsPage">COVID-19 News</a></h2>
-    </div>
-  </body>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
+              <a href="#">WELL</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+</body>
+
 </html>
