--- a/Backend/views/infectionOverview.ejs
+++ b/Backend/views/infectionOverview.ejs
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Coronavirus Express</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="illustration">
-      <svg></svg>
-      <div class="passage">
-        <p>Confirmed</p>
-        <p>Suspected</p>
-        <p>Cured</p>
-        <p>Dead</p>
-        <p>Critical</p>
-      </div>
 
-      <div class="timeRange">
-        <p>2020-02-01</p>
-        <input type="range" step="1" />
-        <p>2020-02-13</p>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <title>Coronavirus Express</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="/home.css">
+</head>
+
+<body>
+  <div class="navbar">
+    <ul>
+      <li><a href="/overview">Infection Overview</a></li>
+      <li><a href="/date_picker">Date Picker</a></li>
+    </ul>
+  </div>
+  <div class="illustration">
+    <svg></svg>
+    <div class="passage">
+      <p>Confirmed</p>
+      <p>Suspected</p>
+      <p>Cured</p>
+      <p>Dead</p>
+      <p>Critical</p>
     </div>
 
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="data.js"></script>
-    <script src="/infectionOverview.js"></script>
-  </body>
+    <div class="timeRange">
+      <p>2020-02-01</p>
+      <input type="range" step="1" />
+      <p>2020-02-13</p>
+    </div>
+  </div>
+
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script src="data.js"></script>
+  <script src="/infectionOverview.js"></script>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
+            <a href="#">WELL</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
