--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -8,17 +8,12 @@
   <link rel="stylesheet" type="text/css" href="/jquery-ui-1.12.1/jquery-ui.min.css">
   <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.structure.css">
   <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
-  <link rel="stylesheet" type="text/css" href="/home.css">
+  <link rel="stylesheet" type="text/css" href="/navFooter.css">
 </head>
 
 <body>
 
-  <div class="navbar">
-    <ul>
-      <li><a href="/overview">Infection Overview</a></li>
-      <li><a href="/date_picker">Date Picker</a></li>
-    </ul>
-  </div>
+  <%- include('./components/navBar.ejs'); %>
 
   <div class="center-container">
     <div class="container ui-corner-right">
@@ -38,17 +33,9 @@
 
     </div>
   </div>
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
-            <a href="#">WELL</a>.
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
+
+  <%- include('./components/footer.ejs'); %>
+
 </body>
 
 </html>
