--- a/Backend/public/newsPage.css
+++ b/Backend/public/newsPage.css
@@ -1,16 +1,33 @@
 header{
     font-size: 30px;
-    background-color: #add2eb;
+    background-image: url(https://www.cdc.gov/coronavirus/2019-ncov/images/home-banner.jpg);
     text-align: center;
     padding: 20px;
     margin: auto;
-    width: 99%;
+    width: 100%;
+    height: 180px;
+    color: white;    
 }
 
-#container{
+#newsHeader{
+    margin: 50px auto;
+}
+
+#widgetButton{
+    position:absolute; 
+    top:60px; 
+    right:30px;
+}
+
+#tabs{
     width: 90%;
     margin: auto;
     padding: 10px;
+    border: none;
+}
+
+#tabs > div {
+    padding: 0px;
 }
 
 .card{
