--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -51,9 +51,18 @@
         Don't have an account?
         <a id="doSignIn" href="/api/signup">Sign up here!</a>
       </div>
-      <div class="hint-text">
+      <!-- <div class="hint-text">
         See Our Stay Strong Slogan
         <h2><a id="staystrong" href="/animation">Our Slogan</a></h2>
+      </div> -->
+      <div class="hint-text">
+        <h2><a id="staystrong" href="/db/userlist">Check Userlist</a></h2>
+      </div>
+      <div class="hint-text">
+        <h2><a id="staystrong" href="/api/signup">Add User</a></h2>
+      </div>
+      <div class="hint-text">
+        <h2><a id="staystrong" href="/api/deleteuser">Delete User</a></h2>
       </div>
     </div>
 
