search target user&reset password func

--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -56,13 +56,23 @@
         <h2><a id="staystrong" href="/animation">Our Slogan</a></h2>
       </div> -->
       <div class="hint-text">
-        <h2><a id="staystrong" href="/db/userlist">Check Userlist</a></h2>
+        <h2><a id="userlist" href="/db/userlist">Check Userlist</a></h2>
       </div>
       <div class="hint-text">
-        <h2><a id="staystrong" href="/api/signup">Add User</a></h2>
+        <h2>
+          <a id="finduser" href="/db/finduser">Search User</a>
+        </h2>
       </div>
       <div class="hint-text">
-        <h2><a id="staystrong" href="/api/deleteuser">Delete User</a></h2>
+        <h2><a id="signup" href="/api/signup">Add User</a></h2>
+      </div>
+      <div class="hint-text">
+        <h2><a id="deleteuser" href="/api/deleteuser">Delete User</a></h2>
+      </div>
+      <div class="hint-text">
+        <h2>
+          <a id="resetpassword" href="/api/resetpassword">Reset Password</a>
+        </h2>
       </div>
     </div>
 
