--- a/Backend/views/showuser.ejs
+++ b/Backend/views/showuser.ejs
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p><%= mail %></p>
+    <p>email: <%= mail %></p>
+    <p>first name: <%= fname %></p>
+    <p>last name: <%= lname %></p>
   </body>
 </html>
