add link on the homepage to the dashboard

--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -30,7 +30,9 @@
       <div id="newsPage">
         <h2><a href="/newsPage">COVID-19 News</a></h2>
       </div>
-
+      <div id="COVID-19-dashboard">
+        <h2><a href="/US_COVID_19_dashboard">Simplified US COVID-19 Dashboard</a></h2>
+      </div>
     </div>
   </div>
 
