add global COVID19 dashboard

--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -33,6 +33,9 @@
       <div id="COVID-19-dashboard">
         <h2><a href="/US_COVID_19_dashboard">Simplified US COVID-19 Dashboard</a></h2>
       </div>
+      <div id="global_COVID19_dashboard">
+        <h2><a href="/global_COVID_19_dashboard">Global COVID-19 Dashboard</a></h2>
+      </div>
     </div>
   </div>
 
