--- a/Backend/public/login.css
+++ b/Backend/public/login.css
@@ -1,6 +1,9 @@
+html {
+  height: 100%;
+}
 body {
   color: #fff;
-  background: #add2eb;
+  /* background: #add2eb; */
   font-family: 'Roboto', sans-serif;
   height: 100%;
 }
@@ -22,14 +25,28 @@ body {
 }
 
 .login-form {
-  width: 390px;
-  margin: 150px auto;
+  width: 100%;
+  height: 100%;
+  /* margin: 150px auto; */
+}
+
+.login-left {
+  background-image: url("./assets/login_pic.png");
+  background-size: auto;
+}
+
+.login-right {
+  background: #add2eb;
 }
 
 .login-form form {
+  width: 390px;
   color: #999;
   border-radius: 3px;
+  margin-top: 150px;
   margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
   background: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   padding: 30px;
@@ -98,7 +115,7 @@ body {
   text-decoration: underline;
 }
 
-.login-form .hint-text {
+.hint-text {
   padding-bottom: 15px;
   text-align: center;
 }
