--- a/Backend/views/components/navBar.ejs
+++ b/Backend/views/components/navBar.ejs
@@ -3,5 +3,10 @@
         <li><a href="/overview">Infection Overview</a></li>
         <li><a href="/date_picker">Date Picker</a></li>
         <li><a href="/newspage">Feeds</a></li>
+        <li><a href="/overview">Infection Overview</a></li>
+        <li><a href="/date_picker">Date Picker Widget</a></li>
+        <li><a href="/newsPage">COVID-19 News</a></li>
+        <li><a href="/US_COVID_19_dashboard">Simplified US COVID-19 Dashboard</a></li>
+        <li><a href="/global_COVID_19_dashboard">Global COVID-19 Dashboard</a></li>
     </ul>
 </div>
