--- a/Backend/views/login.ejs
+++ b/Backend/views/login.ejs
@@ -14,32 +14,38 @@
 
 <body>
   <div class="login-form" id="logInForm">
-    <form action="http://localhost:5000/api/login" method="post">
-      <h2>Log In</h2>
-      <hr />
-      <div class="form-group">
-        <input type="email" class="form-control" name="email" placeholder="Email" required="required" />
+    <div class="login-left" style="float: left; width: 50%; height: 100%;"></div>
+    <div class="login-right" style="float: right; width: 50%;height: 100%;">
+      <form action="http://localhost:5000/api/login" method="post">
+        <h2>Log In</h2>
+        <hr />
+        <div class="form-group">
+          <input type="email" class="form-control" name="email" placeholder="Email" required="required" />
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" name="password" placeholder="Password" required="required" />
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-lg">Log In</button>
+        </div>
+      </form>
+      <div class="hint-text">
+        Don't have an account?
+        <a id="doSignIn" href="/api/signup">Sign up here!</a>
       </div>
-      <div class="form-group">
-        <input type="password" class="form-control" name="password" placeholder="Password" required="required" />
+      <div class="hint-text">
+        <h2>
+          <a id="resetpassword" href="/api/resetpassword">Reset Password</a>
+        </h2>
       </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg">Log In</button>
-      </div>
-    </form>
-    <div class="hint-text">
-      Don't have an account?
-      <a id="doSignIn" href="/api/signup">Sign up here!</a>
     </div>
+
+
     <!-- <div class="hint-text">
         See Our Stay Strong Slogan
         <h2><a id="staystrong" href="/animation">Our Slogan</a></h2>
       </div> -->
-    <div class="hint-text">
-      <h2>
-        <a id="resetpassword" href="/api/resetpassword">Reset Password</a>
-      </h2>
-    </div>
+
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
