Tweak home page

--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.structure.css">
   <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
   <link rel="stylesheet" type="text/css" href="/navFooter.css">
+  <link rel="stylesheet" type="text/css" href="/home.css">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
     <div class="container ui-corner-right">
       <h1 class="">Home Page</h1>
       <h2>Welcome!</h2>
+      <h2>Please Check what you want via Navbar!</h2>
     </div>
   </div>
 
