--- a/Backend/public/home.css
+++ b/Backend/public/home.css
@@ -1,13 +1,16 @@
 body {
   background-color: #add2eb;
   margin: 0;
+  height: 100%;
 }
 
 .center-container {
-  margin: 150px auto;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
+  /* margin: 150px auto; */
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  
   text-align: center;
+  /* background-image: url("./assets/login_pic.png"); */
 }
 
