Tweak home page

--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -20,7 +20,7 @@
     <div class="container ui-corner-right">
       <h1 class="">Home Page</h1>
       <h2>Welcome!</h2>
-      <h2>Please Check what you want via Navbar!</h2>
+      <h2>Please check what you want via Navbar!</h2>
     </div>
   </div>
 
