admin in serverside

--- a/Backend/views/deleteuser.ejs
+++ b/Backend/views/deleteuser.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Delete User</h1>
-    <p>ATTENTION: Which user email you want to delte?</p>
+    <p>ATTENTION: Which user email you want to delete?</p>
     <form action="http://localhost:5000/api/deleteuser" method="post">
       <div class="form-group">
         <p>
