--- a/Backend/views/newsPage.ejs
+++ b/Backend/views/newsPage.ejs
@@ -35,6 +35,8 @@
     <ul class="nav nav-tabs">
     </ul>
   </div>
+  
+  <div id="bottomSpace"></div>
 
   <%- include('./components/footer.ejs'); %>
 
