--- a/Backend/views/components/navBar.ejs
+++ b/Backend/views/components/navBar.ejs
@@ -1,10 +1,9 @@
 <div class="navbar">
     <ul>
+        <li><a href="/">Home Page</a></li>
         <li><a href="/overview">Infection Overview</a></li>
         <li><a href="/date_picker">Date Picker</a></li>
         <li><a href="/newspage">Feeds</a></li>
-        <li><a href="/overview">Infection Overview</a></li>
-        <li><a href="/date_picker">Date Picker Widget</a></li>
         <li><a href="/newsPage">COVID-19 News</a></li>
         <li><a href="/US_COVID_19_dashboard">Simplified US COVID-19 Dashboard</a></li>
         <li><a href="/global_COVID_19_dashboard">Global COVID-19 Dashboard</a></li>
