--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -10,6 +10,12 @@
   <link rel="stylesheet" href="/jquery-ui-1.12.1/jquery-ui.theme.css">
   <link rel="stylesheet" type="text/css" href="/navFooter.css">
   <link rel="stylesheet" type="text/css" href="/home.css">
+
+  <link rel="stylesheet" href="//cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="//cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  <script src="//cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
 </head>
 
 <body>
@@ -23,6 +29,39 @@
       <h2>Please check what you want via Navbar!</h2>
     </div>
   </div>
+  <div class="container" id="abc">
+    <div id="myCarousel" class="carousel slide">
+
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../assets/caros-1.png" alt="First slide">
+        </div>
+        <div class="item">
+          <img src="../assets/caros-2.png" alt="Second slide">
+        </div>
+        <div class="item">
+          <img src="../assets/caros-3.jpg" alt="Third slide">
+        </div>
+      </div>
+
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
 
   <%- include('./components/footer.ejs'); %>
 
