Add home page route

--- a/Backend/views/components/navBar.ejs
+++ b/Backend/views/components/navBar.ejs
@@ -1,6 +1,6 @@
 <div class="navbar">
     <ul>
-        <li><a href="/api/login">Home Page</a></li>
+        <li><a href="/api/home">Home Page</a></li>
         <li><a href="/overview">Infection Overview</a></li>
         <li><a href="/date_picker">Date Picker</a></li>
         <li><a href="/newspage">Feeds</a></li>
